syntax = "proto3";

option java_multiple_files = true;

package eolopark.grpc;

message WindServiceRequest {
  string cityName = 1;
}

message WindServiceResponse {
  double speed = 1;
}

service WindService {
  rpc requestWind(WindServiceRequest) returns (WindServiceResponse);
}
